RESOLVED FIXED120711
[CSS Regions] Regions don't paint correctly in new-multicol elements
https://bugs.webkit.org/show_bug.cgi?id=120711
Summary [CSS Regions] Regions don't paint correctly in new-multicol elements
Rebecca Hauck
Reported 2013-09-04 17:32:00 PDT
This may be a variation of the numerous overflow/clipping issues we've seen. However, even if that is the case, that is blocking this test from verifying the overflow behaves correctly following the column layout The attached test has named flow content that flows through three regions that are children of an element that has a three-column layout. The content overflows both the third region and the multicol container. Result: The content flows correctly through the three region columns, but the overflow is clipped Expected: The overflow should be visible and it should flow into a fourth column. If I remove the regions and only test content overflowing the multicol container, it overflows into a fourth column.
Attachments
test file for bug (2.44 KB, text/html)
2013-09-04 17:32 PDT, Rebecca Hauck
no flags
reference file for test (823 bytes, text/html)
2013-09-04 17:33 PDT, Rebecca Hauck
no flags
Patch (40.00 KB, patch)
2014-02-18 06:15 PST, Andrei Bucur
no flags
Patch for landing (39.64 KB, patch)
2014-02-21 02:17 PST, Andrei Bucur
no flags
Rebecca Hauck
Comment 1 2013-09-04 17:32:49 PDT
Created attachment 210525 [details] test file for bug
Rebecca Hauck
Comment 2 2013-09-04 17:33:03 PDT
Created attachment 210526 [details] reference file for test
Mihai Balan
Comment 3 2013-11-11 02:10:35 PST
The problem here is that a multicolumn container with a definite size should produce overflow columns if there is more content inside it than would fit in the definite size. However, when the contents of the multicolumn container are regions, no overflow columns are generated *for the overflow* of the last region. That means that if the content in the last region will not overflow the region, overflow columns will be properly generated. In order to observe the latter behavior, just add to the `#region-3` element in the attached sample, the declaration: `height: 400px;` - this will lead to the expected result being produced.
Andrei Bucur
Comment 4 2014-02-13 07:13:22 PST
The test works with the old-multicol implementation. I'll investigate why it's not working with regions based multicol.
Andrei Bucur
Comment 5 2014-02-18 06:15:00 PST
Dave Hyatt
Comment 6 2014-02-20 10:31:21 PST
Comment on attachment 224502 [details] Patch r=me
Andrei Bucur
Comment 7 2014-02-21 02:17:28 PST
Created attachment 224847 [details] Patch for landing
WebKit Commit Bot
Comment 8 2014-02-21 03:21:25 PST
Comment on attachment 224847 [details] Patch for landing Clearing flags on attachment: 224847 Committed r164481: <http://trac.webkit.org/changeset/164481>
WebKit Commit Bot
Comment 9 2014-02-21 03:21:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.